# open_flashloader_template

./: CMakeLists.txt  Readme.md  example.xml  linkerscript.ld  readme.md
.devcontainer/: devcontainer.json  postcreate.sh
.github/workflows/: build.yml
entry/: cortex-vector.cpp  entry.c  entry.hpp
flash/: flash_device.cpp  flash_os.hpp  main.cpp
